--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="please_click_back_again_to_exit">Please click Back again to exit</string>
+    <string name="take_picture">take_picture</string>
 
 </resources>
